<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/new_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_round_border"
        android:drawableStart="@drawable/custom_lock_ic"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:padding="16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:layout_below="@id/password_layout">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/verify_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/password_layout"
        android:background="@drawable/custom_round_border"
        android:drawableStart="@drawable/custom_lock_ic"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/verify_password"
        android:inputType="textPassword"
        android:padding="16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/verify_password_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_layout_2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/round_bg"
        android:onClick="verifyPassword"
        android:text="@string/verify_password"
        android:textColor="@color/textButtonColor"
        android:textSize="20dp" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/round_bg"
        android:onClick="cancel"
        android:text="@string/cancel"
        android:textColor="@color/textButtonColor"
        android:textSize="20dp" />

</RelativeLayout>
